Fixed footer logo alignment

--- a/css/theme.css
+++ b/css/theme.css
@@ -84,13 +84,13 @@ footer {
 }
 
 footer .callout {
-  max-width: 40%;
-  margin-fight: 60%;
+  max-width: 50%;
+  margin-right: 50%;
 }
 
 #footer-logo {
   position: absolute;
-  right: 15%;
+  right: 0;
   margin-top: -130px;
 }
 
